--- a/src/components/TeamInfo/TeamInfo.css
+++ b/src/components/TeamInfo/TeamInfo.css
@@ -1,4 +1,4 @@
-.team-info__container {
+.team-info {
     font-family: "Stolzl", Arial, sans-serif;
     min-width: 443px;
     width: 100%;
@@ -11,7 +11,7 @@
 }
 
 .team-info__name {
-    margin: 40px 8px 0 40px;
+    margin: 41px 8px 0 40px;
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
